# oop_exercises

./: .gitignore  README.md
classes/measures/: CMakeLists.txt  main.cpp
classes/reference_return/: README.md
classes/strings/: main.cpp
classes_and_objects/: CMakeLists.txt  color.h  main.cpp
classes_and_objects/rect/: Rect.cpp  Rect.h
exam/exam1/: CMakeLists.txt  main.cpp
exam/fileIO-17/: CMakeLists.txt  main.cpp
exam/fileIO-18/: CMakeLists.txt  main.cpp
exam/test/: CMakeLists.txt  Class_.cpp  Class_.h  main.cpp
exam/uebung-19/: CMakeLists.txt  main.cpp
exam/uebung-23/: CMakeLists.txt  main.cpp
exam/uebung-23a/: CMakeLists.txt  main.cpp
exam/uebung-23b/: CMakeLists.txt  main.cpp
exam/uebung-messw/: CMakeLists.txt  main.cpp
exceptions/custom_exceptions/: CMakeLists.txt  main.cpp
fileIO/fileIO_charwise/: main.cpp
fileIO/fileIO_linewise/: main.cpp
fileIO_charwise/: CMakeLists.txt
fileIO_linewise/: CMakeLists.txt
fractions/: CMakeLists.txt  main.cpp
inheritance/gra-comp/: CMakeLists.txt
inheritance/gra-comp/comp/: comp.cpp  comp.h
inheritance/gra-comp/include/: sdlinterf.c
inheritance/gra-comp/rect/: Rect.cpp
inheritance/inheritances_and_clone/: CMakeLists.txt  main.cpp
inheritance/tickets/: consts.h
inheritances_and_clone/circ/: circ.cpp
inheritances_and_clone/color/: color.cpp  color.h
inheritances_and_clone/parent/: GraphicObject.cpp
inheritances_and_clone/rect/: Rect.h
reference_return/: CMakeLists.txt  main.cpp
strings/: CMakeLists.txt
templates/count_words/: main.cpp  (+1 more)
tickets/: CMakeLists.txt  main.cpp
(+18 files in other folders)
